# WhatAreTheOdds

./: .gitmodules  README.md
backend/: .gitignore  CMakeLists.txt
backend/Backend/: CMakeLists.txt  main.cpp
backend/Dependencies/asio/: CMakeLists.txt
backend/Dependencies/nlohmannjson/: CMakeLists.txt
backend/Dependencies/restbed/: CMakeLists.txt
backend/GiveMeTheOdds/: CMakeLists.txt  main.cpp
backend/WhatAreTheOdds/: CMakeLists.txt  Empire.cpp  Empire.h  MillenniumFalcon.cpp  MillenniumFalcon.h  OddsCalculator.cpp  OddsCalculator.h  Utils.cpp  Utils.h  WhatAreTheOdds.cpp  WhatAreTheOdds.h
frontend/public/: index.html  manifest.json
frontend/src/: App.js  WhatAreTheOdds.js  WhatAreTheOddsAPI.js
